test/should-fail/vsgc3345.f3
/*
 * @test/warning
 */

public class Foo { public var abc :Number };
public var aa : Foo = Foo{abc:12};
public var kv = at (3s) { aa.abc => 14 } ;
